# bibtools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: lint.yml
docs/: build.py  index.html
plugins/bibtidy/.claude-plugin/: plugin.json
plugins/bibtidy/skills/bibtidy/: SKILL.md
skills/bibtidy/: SKILL.md
skills/bibtidy/tools/: compare.py  crossref.py  duplicates.py  edit.py  fmt.py  log.py  parser.py
tests/: conftest.py  run_bibtidy_cc_tests.sh  run_bibtidy_tests.sh  test_compare.py  test_crossref.py  test_docs_build.py  test_duplicates.py  test_fmt.py  test_validate.py  validate.py
tests/bibtidy/: test_compare.py  test_crossref.py  test_duplicates.py  test_edit.py  test_log.py  test_validate.py  validate.py
tests/bibtidy/fixtures/: expected.bib  input.bib
