[project]
name = "bibtools"
version = "1.3.0"
description = "A bibliography toolkit for LaTeX — Claude Code plugin"
requires-python = ">=3.10"
license = "MIT"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=7.0",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "skills/bibtidy/tools",
    "tests",
    "tests/bibtidy",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true
