[project]
name = "bibtools"
version = "1.7.6"
description = "A bibliography toolkit for LaTeX, built as agent skills"
requires-python = ">=3.10"
license = "MIT"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=7.0",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "skills/bibtidy/tools",
    "tests",
    "tests/bibtidy",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true
